<resources>
    <string name="app_name">eMarket</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="Password">Password</string>
    <string name="LoginAs">Login As</string>
    <string name="RegisterHere">New User Click here to Register.</string>
    <string name="title_activity_seller_dashboard">SellerDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EMarket Seller</string>
    <string name="nav_header_subtitle">Edit your Profile</string>
    <string name="nav_header_desc">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="menu_home">Products</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="MyProducts">My Products</string>
    <string name="products_summary">Products Summary</string>
    <string name="total_number_of_products">Total Number of Products</string>
    <string name="Search">Search Your Product</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="no_product_name">No Product Name</string>
    <string name="add_product_verbies">Add Products by Clicking + icon</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="tab_text_1">Personal Info</string>
    <string name="tab_text_2">Contact Info</string>
    <string name="tab_text_3">Account Info</string>
    <string name="SignUp">eMarket Sign Up</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_label">What\'s your Name?</string>
    <string name="enter_name_hint">Enter your Full Name</string>
    <string name="location">Where you Live?</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="contact_label">How People can contact you?</string>
    <string name="eMail">Email Id (Optional)</string>
    <string name="verify_otp">Verify</string>
    <string name="cancel">Cancel</string>
    <string name="password_title">Almost Done !</string>
    <string name="registration_password_label">Set a Strong Password for your account</string>
    <string name="register">Register</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="cnfPassword">Confirm Password</string>
    <string name="mobile_otp">Mobile OTP</string>
    <string name="email_otp">Email OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_mobile">Verify Mobile Number</string>
    <string name="mobile_number_verified">Mobile Number Verified</string>
    <string name="verify_email">Verify Email id</string>
    <string name="email_verified">Email Verified</string>
    <string name="btn_verify_otp">Verify OTP</string>
    <string name="back">Back</string>
    <string name="otp_fragment">OTPFragrment</string>
    <string name="email_ack">Email not Verified yet</string>
    <string name="title_activity_profile">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Profile">My Profile</string>
    <string name="address">UserAddress</string>
    <string name="default_username">Emarket User</string>
    <string name="your_current_address">Your Current Address</string>
    <string name="save_changes">Save Changes</string>
    <string name="discard_changes">Discard Changes</string>
</resources>
