<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationThirdFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:text="@string/password_title"
            android:textAlignment="center"
            android:textColor="@color/fontBlack"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:paddingLeft="30dp"
            android:text="@string/registration_password_label"
            android:textColor="@color/fontBlack"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/registration_password"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="110dp"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/cnfPassword"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="180dp"
            android:hint="@string/cnfPassword"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="250dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/password_cancel"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:background="@color/btnGrey"
                android:text="@string/cancel"
                android:textColor="@color/fontBlack" />

            <Button
                android:id="@+id/register"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:background="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@color/fontWhite" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>