<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.emarket.RegistrationFirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/registration_name">

        <action
            android:id="@+id/action_name_to_contact"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.emarket.RegistrationSecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/registration_contact">

        <action
            android:id="@+id/action_contact_to_otp_verification"
            app:destination="@id/otpFragment" />
    </fragment>
    <fragment
        android:id="@+id/otpFragment"
        android:name="com.example.emarket.OtpVerification"
        android:label="@string/otp_fragment"
        tools:layout="@layout/fragment_otp_verification">

        <action
            android:id="@+id/action_verify_otp_to_password"
            app:destination="@id/ThirdFragment" />
        <action
            android:id="@+id/action_back_to_contact"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.emarket.RegistrationThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/registration_password">

    </fragment>
</navigation>
