<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationSecondFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="30dp"
            android:text="@string/contact_label"
            android:textColor="@color/fontBlack"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/mobileNumber"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:hint="@string/MobileNumber"
            android:inputType="phone" />

        <EditText
            android:id="@+id/eMail"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="130dp"
            android:hint="@string/eMail"
            android:inputType="textEmailAddress" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">

            <Button
                android:id="@+id/contact_cancel"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:background="@color/btnGrey"
                android:text="@string/cancel"
                android:textColor="@color/fontBlack" />

            <Button
                android:id="@+id/btn_send_otp"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:background="@color/colorPrimary"
                android:clickable="false"
                android:text="@string/send_otp"
                android:textColor="@color/fontWhite"
                android:layout_marginStart="50dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>