<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationFirstFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="30dp"
            android:text="@string/name_label"
            android:textColor="@color/fontBlack"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:hint="@string/enter_name_hint"
            android:inputType="textAutoCorrect" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="130dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/name_cancel"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:background="@color/btnGrey"
                android:text="@string/cancel"
                android:textColor="@color/fontBlack" />

            <Button
                android:id="@+id/continue_to_contact"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:background="@color/colorPrimary"
                android:text="@string/next"
                android:textColor="@color/fontWhite" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>