<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpVerification">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_otp"
                        android:textColor="@color/fontBlack"
                        android:layout_marginLeft="30dp"
                        android:textSize="18sp"
                        android:layout_marginStart="30dp" />
                    <EditText
                        android:id="@+id/mobile_otp"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:inputType="number"
                        android:maxLength="6"
                        android:hint="Enter OTP Sent to your Mobile"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_otp_layout"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_otp"
                        android:textColor="@color/fontBlack"
                        android:layout_marginLeft="30dp"
                        android:textSize="18sp"
                        android:layout_marginStart="30dp" />
                    <EditText
                        android:id="@+id/email_otp"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:inputType="number"
                        android:maxLength="6"
                        android:hint="Enter OTP Sent to your EMail"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <Button
                        android:layout_width="150dp"
                        android:id="@+id/back_to_contact"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:background="@color/btnGrey"
                        android:text="@string/back"
                        android:layout_marginStart="30dp" />
                    <Button
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/verify_and_continue"
                        android:background="@color/colorPrimary"
                        android:text="@string/btn_verify_otp"
                        android:textColor="@color/fontWhite"
                        android:layout_marginStart="30dp" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>