<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.ProductListFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/products_summary"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:layout_marginLeft="110dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/total_number_of_products"
                    android:textColor="#000"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15"
                    android:id="@+id/totalNoOfProd"
                    android:layout_marginStart="220dp"
                    android:layout_marginLeft="220dp"
                    android:layout_marginTop="50dp"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="83dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/Search"
                    android:textColor="#000"
                    />
                <androidx.appcompat.widget.SearchView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="200dp"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="80dp"
                    android:id="@+id/search_product"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

</LinearLayout>